Small layout fixes with overflow

--- a/client/src/containers/SignupForm/SignupForm.module.css
+++ b/client/src/containers/SignupForm/SignupForm.module.css
@@ -1,6 +1,6 @@
 .Container {
     width: 60%;
-    padding-top: 10vh;
+    padding: 10vh 0;
     margin: 0 auto;
 }
 
