--- a/client/src/hoc/Layout/Layout.module.css
+++ b/client/src/hoc/Layout/Layout.module.css
@@ -7,5 +7,6 @@
 .MainContainer {
     width: 100%;
     height: 100vh;
+    overflow: auto;
     background-image: linear-gradient(to bottom, #86377b 20%, #27273c 80%);
 }
